# affiliator-scrape

./: .gitignore  CLEANUP_SUMMARY.md  COBA_LAGI_IMPLEMENTATION.md  CONTACT_EXTRACTION_GUIDE.md  CONTACT_EXTRACTION_SUMMARY.md  CURRENT_STATUS.md  DEPLOYMENT.md  Dockerfile  EXTRACTION_FIX_SUMMARY.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_SETUP.md  PROXY_SETUP_WEBSHARE.md  QUICK_START.md  QUICK_START_MANUAL_COOKIES.md  README.md  README_PRODUCTION.md  README_SCRAPER.md  README_SIMPLE.md  SCRAPER_STATUS_REPORT.md  SETUP_GUIDE.md  SHADOW_DOM_ANALYSIS.md  WEB_DASHBOARD_SUMMARY.md  app.py  browser_extension_captcha.py  cleanup.sh  click_from_list_results.json  dashboard.py  debug_all_clickable_elements.py  debug_contact_165412.html  debug_contact_165556.html  debug_contact_165821.html  debug_contact_171245.html  debug_contact_171307.html  debug_contact_extraction.py  debug_creator_links.py  debug_dynamic_content.py  debug_info_kontak_structure.py  (+124 more)
captcha_helper_extension/: README.md  background.js  content.js  manifest.json
captchasonic_config/: defaultConfig.json
config/: config.safe.json  config.template.json  config_jelajahi.json  config_no_cookie.json  config_production.json  config_public_wifi.json  config_test.json  config_with_proxy.json  cookies.example.json  cookies.json  debug_config.json  free_proxies.txt  premium_captcha_config.json  selectors.json  test_config.json  webshare_proxies.txt
docs/: COOKIE_EXTRACTION_GUIDE_SUMMARY.md  COOKIE_EXTRACTION_QUICK_REFERENCE.md  SCREENSHOTS_NEEDED.md  deployment_docker.md  (+7 more)
(+101 files in other folders)
