[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seller-center-affiliator-scraper"
version = "0.1.0"
description = "Operationally safe affiliator scraper toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["src"]
